# mediaplanpy

./: .gitignore  API_REFERENCE.md  CHANGE_LOG.md  CLAUDE.md  GET_STARTED.md  LICENSE  MediaPlanPy-Technical-Architecture-Summary.md  README.md  SDK_REFERENCE.md  adbudg_formula_type_implementation_plan.md  manual_workspace_upgrade.py  pyproject.toml  requirements.txt
dev/: apply_patch.py
dev/fixtures/: upgrade.patch
docs/: MIGRATION_V2_TO_V3.md  MediaPlanPy-Technical-Architecture-Summary.md  cloud_storage_configuration.md  database_configuration.md  migration_guide_v2_to_v3.md  storage.md  workspace_query.md
examples/: basic_usage.py  examples_01_create_workspace.py  examples_02_load_workspace.py  examples_03_create_mediaplan.py  examples_04_load_mediaplan.py  examples_05_edit_mediaplan.py  examples_06_export_mediaplan.py  examples_07_import_mediaplan.py  examples_08_list_objects.py  examples_09_sql_queries.py  examples_10_manage_mediaplan.py  examples_11_manage_lineitems.py  examples_12_manage_dictionary.py  examples_13_cli_interface.md  examples_14_api_client.py  examples_15_formulas.py  examples_README.md  examples_create_mediaplan.py  examples_edit_mediaplan.py  examples_load_workspace.py  examples_manage_mediaplan.py  mediaplan_database_usage.py  models_usage.py  schema_usage.py  script_temp.py  storage_usage.py  workspace_query_usage.py  workspace_usage.py  worspace_query_usage.py
examples/fixtures/: sample_workspace.json
src/mediaplanpy/: __init__.py  cli.py  exceptions.py
src/mediaplanpy/excel/: __init__.py  exporter.py  format_handler.py  importer.py  validator.py
src/mediaplanpy/models/: __init__.py  base.py  campaign.py  (+11 more)
tests/: README.md  conftest.py  test_excel.py  test_mediaplan_delete.py  test_mediaplan_excel.py  test_mediaplan_json.py  test_models.py  test_schema.py  test_storage.py  test_temp.py  test_workspace.py
tests/e2e/: __init__.py  test_cli.py  test_workflows.py
tests/fixtures/: mediaplan_v2_migration.json  mediaplan_v3_full.json  mediaplan_v3_minimal.json
tests/integration/: test_database.py  test_excel.py  test_load_by_campaign.py  test_query.py  test_workspace_upgrade.py
tests/unit/: test_formulas.py  test_migration.py  test_models.py  test_validation.py
(+36 files in other folders)
